objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Top_Prospect__c</fullName>
        <label>Top Prospect</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Office-Based</fullName>
                </value>
                <value>
                    <fullName>ED/Hospitalist</fullName>
                </value>
                <value>
                    <fullName>Anesthesia</fullName>
                </value>
                <value>
                    <fullName>IDN Modular</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>Optima</fullName>
                </value>
                <value>
                    <fullName>End to End</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transport_Mix__c</fullName>
        <label>Transport Mix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mostly 911 Emergency Transports</fullName>
                </value>
                <value>
                    <fullName>Mostly Non-Emergency Transports</fullName>
                </value>
                <value>
                    <fullName>Mix of 911 Emergency and Non-Emergency Transports</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <label>Twitter Handle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent__c</fullName>
        <formula>Parent_Account__r.Ultimate_Parent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ultimate Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <inlineHelpText>The three components of the healthcare market on which we have focused our solutions.</inlineHelpText>
        <label>Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IDN</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>Physicians</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                    <isActive>false</isActive>
                    <label>International</label>
                </value>
                <value>
                    <fullName>Military</fullName>
                    <isActive>false</isActive>
                    <label>Military</label>
                </value>
                <value>
                    <fullName>State/Local-Emergency Management</fullName>
                    <isActive>false</isActive>
                    <label>State/Local-Emergency Management</label>
                </value>
                <value>
                    <fullName>State/Local-Public Health</fullName>
                    <isActive>false</isActive>
                    <label>State/Local-Public Health</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllActiveLeads</fullName>
        <columns>Vertical__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Parent_Account__c</columns>
        <columns>Sales_Call_Requested__c</columns>
        <columns>Funnel_Stage__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Outcome_Status__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Active Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Active_EMS_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Parent_Account__c</columns>
        <columns>Sales_Call_Requested__c</columns>
        <columns>Funnel_Stage__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Outcome_Status__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Vertical__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Rejected,Dead / Closed / Disqualified</value>
        </filters>
        <filters>
            <field>Vertical__c</field>
            <operation>equals</operation>
            <value>EMS</value>
        </filters>
        <filters>
            <field>Funnel_Stage__c</field>
            <operation>equals</operation>
            <value>Qualified Lead (QL),Sales Accepted Lead (SAL),Sales Qualified Lead (SQL)</value>
        </filters>
        <label>All Active EMS Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Active_IDN_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Parent_Account__c</columns>
        <columns>Sales_Call_Requested__c</columns>
        <columns>Funnel_Stage__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Outcome_Status__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Product_of_Interest_POI__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Rejected,Dead / Closed / Disqualified</value>
        </filters>
        <filters>
            <field>Vertical__c</field>
            <operation>equals</operation>
            <value>IDN</value>
        </filters>
        <filters>
            <field>Funnel_Stage__c</field>
            <operation>equals</operation>
            <value>Qualified Lead (QL),Sales Accepted Lead (SAL),Sales Qualified Lead (SQL)</value>
        </filters>
        <label>All Active IDN Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Physician_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Parent_Account__c</columns>
        <columns>Sales_Call_Requested__c</columns>
        <columns>Funnel_Stage__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Outcome_Status__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Product_of_Interest_POI__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Rejected,Dead / Closed / Disqualified</value>
        </filters>
        <filters>
            <field>Vertical__c</field>
            <operation>equals</operation>
            <value>Physicians</value>
        </filters>
        <filters>
            <field>Funnel_Stage__c</field>
            <operation>equals</operation>
            <value>Qualified Lead (QL),Sales Accepted Lead (SAL),Sales Qualified Lead (SQL)</value>
        </filters>
        <label>All Active Physician Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Parent_Account__c</columns>
        <columns>Sales_Call_Requested__c</columns>
        <columns>Funnel_Stage__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Outcome_Status__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Lead_Source_Detail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Jess</value>
        </filters>
        <label>All Leads</label>
        <sharedTo>
            <group>X18_Integration_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Leads_Owned_by_Hubspot</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Parent_Account__c</columns>
        <columns>Sales_Call_Requested__c</columns>
        <columns>Funnel_Stage__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Outcome_Status__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Vertical__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Hubspot</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filters>
        <label>All Leads Owned by Hubspot</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Active_Qualified_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Parent_Account__c</columns>
        <columns>Funnel_Stage__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Outcome_Status__c</columns>
        <columns>Target__c</columns>
        <columns>Sales_Call_Requested__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Call_Back_Requested_Date__c</columns>
        <columns>Appointment_Meeting_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Funnel_Stage__c</field>
            <operation>contains</operation>
            <value>Qualified Lead (QL),Sales Accepted Lead (SAL),Sales Qualified Lead (SQL)</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Rejected,Dead / Closed / Disqualified</value>
        </filters>
        <label>All Open &amp; Active Qualified Leads</label>
    </listViews>
    <listViews>
        <fullName>Engagement_Scores</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Parent_Account__c</columns>
        <columns>Engagement_Score__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Engagement_Score__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Engagement Scores</label>
    </listViews>
    <listViews>
        <fullName>Gruber_Team_Inactive_Marketing_Leads</fullName>
        <booleanFilter>1 AND 2 AND  (3 OR 4) and 5 and 6</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Call_Back_Requested_Date__c</columns>
        <columns>Appointment_Meeting_Date__c</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Outcome_Status__c</columns>
        <columns>Target__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Sales_Call_Requested__c</columns>
        <columns>Marketing_qualified_lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New - Awaiting Qualification</value>
        </filters>
        <filters>
            <field>Outcome_Status__c</field>
            <operation>equals</operation>
            <value>Awaiting Contact</value>
        </filters>
        <filters>
            <field>Lead_Source_Type__c</field>
            <operation>equals</operation>
            <value>M</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Lead_owner_s_Manager__c</field>
            <operation>contains</operation>
            <value>Gruber</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notContain</operation>
            <value>Integration</value>
        </filters>
        <label>Gruber Team Inactive Marketing Leads</label>
    </listViews>
    <listViews>
        <fullName>Gruber_Team_Open_MQLs</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Parent_Account__c</columns>
        <columns>Sales_Call_Requested__c</columns>
        <columns>Funnel_Stage__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Outcome_Status__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Vertical__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marketing_qualified_lead__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Rejected,Dead / Closed / Disqualified</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notContain</operation>
            <value>Integration</value>
        </filters>
        <filters>
            <field>Lead_owner_s_Manager__c</field>
            <operation>contains</operation>
            <value>Gruber</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notContain</operation>
            <value>Market</value>
        </filters>
        <label>Gruber Team Open MQLs</label>
    </listViews>
    <listViews>
        <fullName>Gruber_Team_Unread_Marketing_Leads</fullName>
        <booleanFilter>1 AND  (2 OR 3) AND 4 AND 5 AND 6</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Lead_Source_Detail__c</columns>
        <columns>Marketing_qualified_lead__c</columns>
        <columns>Sales_Call_Requested__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Lead_Source_Type__c</field>
            <operation>equals</operation>
            <value>M</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Lead_owner_s_Manager__c</field>
            <operation>contains</operation>
            <value>Gruber</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Nurture - Return for Marketing,Rejected,Dead / Closed / Disqualified</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notContain</operation>
            <value>Integration</value>
        </filters>
        <label>Gruber Team Unread Marketing Leads</label>
    </listViews>
    <listViews>
        <fullName>IDN_RCramer_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Parent_Account__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vertical__c</field>
            <operation>equals</operation>
            <value>IDN</value>
        </filters>
        <filters>
            <field>LEAD.STATE</field>
            <operation>equals</operation>
            <value>il,in,ky,mi,mn,nd,oh,sd,wi</value>
        </filters>
        <label>IDN -RCramer Leads</label>
    </listViews>
    <listViews>
        <fullName>MQL_OR_SQL_OWNED_BY_HUBSPOT_INTEGRATION</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Parent_Account__c</columns>
        <columns>Sales_Call_Requested__c</columns>
        <columns>Funnel_Stage__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Outcome_Status__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Vertical__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Funnel_Stage__c</field>
            <operation>equals</operation>
            <value>Qualified Lead (QL),Sales Accepted Lead (SAL),Sales Qualified Lead (SQL)</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>HUBSPOT</value>
        </filters>
        <filters>
            <field>LEAD.CONVERTED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filters>
        <label>MQL OR SQL OWNED BY HUBSPOT INTEGRATION</label>
        <sharedTo>
            <group>X18_Integration_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_Queue_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Parent_Account__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Sales_Call_Requested__c</columns>
        <columns>Funnel_Stage__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Outcome_Status__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>No_Sales_Calls_Requested__c</columns>
        <filterScope>Queue</filterScope>
        <label>Marketing Queue</label>
        <queue>MarketingQueue</queue>
        <sharedTo>
            <group>Marketing</group>
            <group>Marketing_Lead_Queue</group>
            <group>System_Admins</group>
            <group>X18_Integration_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>McHugh_Team_Inactive_Marketing_Leads</fullName>
        <booleanFilter>1 AND 2 AND  (3 OR 4) and 5 and 6</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Call_Back_Requested_Date__c</columns>
        <columns>Appointment_Meeting_Date__c</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Outcome_Status__c</columns>
        <columns>Target__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Sales_Call_Requested__c</columns>
        <columns>Marketing_qualified_lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Outcome_Status__c</field>
            <operation>equals</operation>
            <value>Awaiting Contact</value>
        </filters>
        <filters>
            <field>Lead_Source_Type__c</field>
            <operation>equals</operation>
            <value>M</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Lead_owner_s_Manager__c</field>
            <operation>contains</operation>
            <value>McHugh</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notContain</operation>
            <value>Integration</value>
        </filters>
        <label>OB Team Inactive Marketing Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Qualified</fullName>
        <active>false</active>
        <businessProcess>R1</businessProcess>
        <label>Qualified Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Qualified_Lead</fullName>
        <active>false</active>
        <businessProcess>R1</businessProcess>
        <label>Sales Qualified Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suspect</fullName>
        <active>true</active>
        <businessProcess>R1</businessProcess>
        <label>Suspect Lead</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Lead_Country_Cannot_Be_Blank</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Country)</errorConditionFormula>
        <errorDisplayField>Country</errorDisplayField>
        <errorMessage>The Country must be populated</errorMessage>
    </validationRules>
</CustomObject>